// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSwitchGroup - Snapshots > matches snapshot with children 1`] = `
<div
  class="flex w-full flex-col items-start justify-start gap-6"
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
</div>
`;

exports[`SettingsSwitchGroup - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex w-full flex-col items-start justify-start gap-6 custom-group"
>
  <div>
    Content
  </div>
</div>
`;
